--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,12 @@ img {
 }
 
 .hero {
+    background: #C4C4C4;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(/images/hero-Img.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     text-align: center;
-    background-color: #2F303A;
     padding-top: 200px;
     padding-bottom: 200px;
 }
@@ -275,18 +279,107 @@ margin-right: 30px;
 }
 
 .team-text {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.18;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: var(--alternative-color);
+    margin-bottom: 16px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--alternative-color);
+}
+
+.team-social-list {
+    display: flex;
+    justify-content: center;
+
+}
+
+.team-social-item + .team-social-item {
+    margin-left: 10px;
+}
+
+.team-social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: #AFB1B8;
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+    background-color: #2196F3;
+    color: #FFFFFF;
+}
+
+.team-social-icon {
+fill: currentColor;
+}
+
+.clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.cliens-title {
+    padding-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+.cliens-list {
+    display: flex;
+    justify-content: center;
+}
+
+.cliens-item:not(:last-child) {
+margin-right: 30px;
+}
+
+.cliens-link {
+    padding: 16px 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
+
+.cliens-link:focus,
+.cliens-link:hover {
+    border: 1px solid #2196F3;
+}
+
+
+
+.cliens-link:focus .cliens-icon,
+.cliens-link:hover .cliens-icon {
+    fill: #2196F3;
+}
+
+.cliens-icon {
+    fill: #AFB1B8;
 }
 
 .footer {
     background: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.footer-wrap {
+    display: flex;
+    align-items: baseline;
+}
+
+.address-wrap {
+    margin-right: 70px;
 }
 
 .footer-logo {
@@ -352,6 +445,43 @@ font-family: 'Raleway';
         color: rgba(255, 255, 255, 0.6);
 }
 
+.social-title {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-bottom: 20px;
+}
+
+.footer-social-list {
+    display: flex;
+}
+
+.footer-social-item + .footer-social-item {
+    margin-left: 10px;
+}
+
+.footer-social-link {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 44px;
+height: 44px;
+background-color: rgba(255, 255, 255, 0.1);
+border-radius: 50%;
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #2196F3;
+}
+
+.footer-social-icon {
+fill: #FFFFFF;
+}
+
 /* ---------portfolio---------- */
 
 .navigation {
@@ -406,6 +536,8 @@ font-family: 'Raleway';
     margin-right: 30px;
     padding-bottom: 20px;
     outline: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-item:nth-child(-n + 6) {
