--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,10 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(/images/hero-Img.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     text-align: center;
+    max-width: 1600px;
+    margin: 0 auto;
     padding-top: 200px;
     padding-bottom: 200px;
 }
@@ -189,26 +191,40 @@ img {
 }
 
 .peculiarities-item {
-flex-basis: calc(100% / 3 - 30px);
-margin-right: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+    margin-right: 30px;
+}
+
+.peculiarities-item::before {
+    content: "";
+    width: 270px;
+    height: 120px;
+    display: block;
+    background-image: url(../images/antenna.svg);
+    background-color: #F5F4FA;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto;
+    border-radius: 4px;
+    margin-bottom: 30px;
 }
 
 .peculiarities-title {
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: var(--header-color);
-        margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--header-color);
+    margin-bottom: 10px;
 }
 
 .peculiarities-text {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        color: var(--alternative-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--alternative-color);
 }
 
 .occupation {
@@ -216,12 +232,12 @@ margin-right: 30px;
 }
 
 .occupation-title {
-        font-size: 36px;
-        line-height: 1.16;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: var(--header-color);
-        padding-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--header-color);
+    padding-bottom: 50px;
 }
 
 .occupation-list {
