--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,30 @@ img {
     margin-left: auto;
 }
 
+.contacts-item {
+    display: flex;
+}
+
+.contacts-item::before {
+    content: "";
+    margin-right: 10px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.icon-envelope::before {
+    background-image: url(../images/envelope.svg);
+    width: 16px;
+    height: 12px;
+}
+
+.icon-smartphone::before {
+    background-image: url(../images/smartphone.svg);
+    width: 10px;
+    height: 16px;
+}
+
 .header-mail,
 .header-tel {
     font-weight: 500;
@@ -124,13 +148,6 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--alternative-color);
-}
-
-.contacts-item::before {
-    content: "";
-    display: block;
-    background-color: #2196F3;
-    background-image: url(../images/smartphone.svg);
 }
 
 .header-mail:hover,
